add additional links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,6 +112,7 @@ section {
 
 body {
     line-height: 1;
+    --hover-color: #f6d443;
 }
 
 ol,
@@ -207,13 +208,13 @@ a {
     -ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
     transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
     /* border-bottom: dotted 1px; */
-    color: #49bf9d;
+    /* color: var(--hover-color); */
     text-decoration: none;
 }
 
 a:hover {
     /* border-bottom-color: transparent; */
-    color: #49bf9d !important;
+    color: var(--hover-color) !important;
     text-decoration: none;
 }
 
@@ -1655,7 +1656,7 @@ input[type="password"]:focus,
 input[type="email"]:focus,
 select:focus,
 textarea:focus {
-    border-color: #49bf9d;
+    border-color: var(--hover-color);
 }
 
 select {
@@ -1760,7 +1761,7 @@ input[type="radio"]:checked+label:before {
 
 input[type="checkbox"]:focus+label:before,
 input[type="radio"]:focus+label:before {
-    border-color: #49bf9d;
+    border-color: var(--hover-color);
 }
 
 input[type="checkbox"]+label:before {
@@ -2308,8 +2309,8 @@ input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover,
 .button:hover {
-    border-color: #49bf9d;
-    color: #49bf9d !important;
+    border-color: var(--hover-color);
+    color: var(--hover-color) !important;
 }
 
 input[type="submit"]:active,
@@ -2317,8 +2318,8 @@ input[type="reset"]:active,
 input[type="button"]:active,
 .button:active {
     background-color: rgba(73, 191, 157, 0.1);
-    border-color: #49bf9d;
-    color: #49bf9d !important;
+    border-color: var(--hover-color);
+    color: var(--hover-color) !important;
 }
 
 input[type="submit"].icon,
@@ -2361,8 +2362,8 @@ input[type="submit"].primary,
 input[type="reset"].primary,
 input[type="button"].primary,
 .button.primary {
-    background-color: #49bf9d;
-    border-color: #49bf9d;
+    background-color: var(--hover-color);
+    border-color: var(--hover-color);
     color: #ffffff !important;
 }
 
@@ -2554,6 +2555,9 @@ input[type="button"]:disabled,
     padding-top: 0;
 }
 
+.accessibility-report {
+    color: #A2A2A2;
+}
 
 /* Poptrox */
 
