--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,10 @@
 /* color variables */
 body {
     --text-color: #313638;
+    --blue: #459EBC;
+    --yellow: #F6D443;
+    --base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif; 
+
 }
 
 html,
@@ -117,7 +121,7 @@ section {
 
 body {
     line-height: 1;
-    --hover-color: #f6d443;
+    --hover-color: var(--yellow);
 }
 
 ol,
@@ -201,7 +205,7 @@ input,
 select,
 textarea {
     color: var(--text-color);
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif;
+    font-family: var(--base-font);
     font-size: 16pt;
     font-weight: lighter;
     line-height: 1.75em;
@@ -1584,7 +1588,7 @@ article.special {
 }
 
 header p {
-    color: #b2b2b2;
+    color: var(--text-color);
     position: relative;
     margin: 0 0 1.5em 0;
 }
@@ -1610,7 +1614,7 @@ header h6+p {
 }
 
 header.major h2 {
-    font-size: 2em;
+    font-size: 1.8em;
 }
 
 
@@ -2445,7 +2449,7 @@ input[type="button"]:disabled,
     -webkit-justify-content: space-between;
     -ms-justify-content: space-between;
     justify-content: space-between;
-    background-color: #459EBC;
+    background-color: var(--blue);
     background-attachment: scroll, scroll;
     /* background-image: url("images/overlay.png"), url("../../images/bgYellowWall.png"); */
     background-position: top left, top left;
@@ -2454,11 +2458,11 @@ input[type="button"]:disabled,
     color: rgba(255, 255, 255, 0.5);
     height: 100%;
     left: 0;
-    padding: 6em 4em;
+    padding: 4em 2em;
     position: fixed;
     text-align: right;
     top: 0;
-    width: 35%;
+    width: 350px;
 }
 
 #header>* {
@@ -2509,11 +2513,11 @@ input[type="button"]:disabled,
 }
 
 #footer .icons a {
-    color: rgba(255, 255, 255, 0.4);
+    color: var(--text-color);
 }
 
 #footer .copyright {
-    color: rgba(255, 255, 255, 0.4);
+    color: white;
     font-size: 0.8em;
     list-style: none;
     margin: 1em 0 0 0;
@@ -2542,10 +2546,10 @@ input[type="button"]:disabled,
 /* Main */
 
 #main {
-    margin-left: 35%;
-    max-width: 54em;
-    padding: 6em 3em 3em 3em;
-    width: calc(100% - 35%);
+    margin-left: 350px;
+    /* max-width: 54em; */
+    padding: 4em 3em 3em 3em;
+    /* width: calc(100% - 35%); */
 }
 
 #main>section {
@@ -2854,8 +2858,8 @@ body.is-touch .poptrox-popup .closer {
 @media screen and (max-width: 1280px) {
     /* Header */
     #header {
-        padding: 6em 3em 3em 3em;
-        width: 30%;
+        padding: 4em 4em;
+        width: 350px;
     }
     #header h1 {
         font-size: 2em;
@@ -2881,10 +2885,10 @@ body.is-touch .poptrox-popup .closer {
     }
     /* Main */
     #main {
-        margin-left: 30%;
+        margin-left: 350px;
         max-width: none;
-        padding: 6em 3em 3em 3em;
-        width: calc(100% - 30%);
+        padding: 4em 3em 3em 3em;
+        /* width: calc(100% - 30%); */
     }
 }
 
@@ -2911,11 +2915,12 @@ body.is-touch .poptrox-popup .closer {
         background-position: top left, center center;
         background-size: auto, cover;
         left: auto;
-        padding: 3em 4em;
+        padding: 24px;
         position: relative;
         text-align: center;
         top: auto;
         width: 100%;
+        height: 350px;
         display: block;
     }
     #header h1 {
@@ -2932,8 +2937,8 @@ body.is-touch .poptrox-popup .closer {
     /* Footer */
     #footer {
         background-attachment: scroll;
-        background-color: #1f1815;
-        background-image: url("images/overlay.png"), url("../../images/bgYellowWall.png");
+        background-color: var(--blue);
+        /* background-image: url("images/overlay.png"), url("../../images/bgYellowWall.png"); */
         background-position: top left, bottom center;
         background-repeat: repeat, no-repeat;
         background-size: auto, cover;
@@ -2979,14 +2984,13 @@ body.is-touch .poptrox-popup .closer {
     h3 {
         font-size: 1em;
     }
+
     /* Section/Article */
     section.special,
     article.special {
         text-align: center;
     }
-    header.major h2 {
-        font-size: 1.35em;
-    }
+
     /* List */
     ul.labeled-icons li {
         padding-left: 2em;
@@ -2996,15 +3000,8 @@ body.is-touch .poptrox-popup .closer {
     }
     /* Header */
     #header {
-        padding: 1.25em 1.5em;
-    }
-
-    #header h1 {
-        font-size: 1.75em;
-    }
-
-    #header h2 {
-        font-size: 1.5em;
+        padding: 24px;
+        height: 350px;
     }
 
     /* Footer */
@@ -3043,7 +3040,8 @@ body.is-touch .poptrox-popup .closer {
     }
 
     #header {
-        padding: 1.5em 1.5em;
+        padding: 1.5em;
+        height: 350px;
     }
     #header h1 br {
         display: none;
