--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -4,9 +4,11 @@
 
 /* Button styling */
 article {
-  --green: #14AD80;
-  --green-button: #0F8065;
-  --green-hov: #0E725A;
+  /* --green: #14AD80; */
+  --yellow: #F6D443;
+  --yellow-hov: #DBC029;
+  --text-color: #313638;
+  --base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif; 
   display: inline-block !important;
 }
 
@@ -18,6 +20,7 @@ article {
 
 .button-wrapper {
   padding: 20px 0; 
+  text-align: center;
 }
 
 @media screen and (max-width: 600px) {
@@ -33,11 +36,11 @@ article {
   border-radius: 50px;
   border: medium none;
   padding: 1em 2em;
-  color: white;
+  color: var(--text-color);
   font-size: 1em;
-  font-family: "Source Sans Pro";
+  font-family: var(--base-font);
   /* text-transform: uppercase; */
-  font-weight: bold;
+  /* font-weight: bold; */
   letter-spacing: 1px;
   transition: background 350ms cubic-bezier(0, 0, 0.25, 1) 0s;
 }
@@ -52,9 +55,9 @@ article {
 }
 
 .button-color {
-  background-color: var(--green-button);
+  background-color: var(--yellow);
 }
 
 .button-color:hover {
-    background-color: var(--green-hov);
+    background-color: var(--yellow-hov);
 }
