--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,3 +1,16 @@
+.navlink {
+  display: block;
+  font-size: 18px;
+  padding-bottom: 5px;
+  color: white;
+}
+
+@media screen and (max-width: 980px) {
+  .navlink {
+    display: none;
+  }
+}
+
 .portfolio-title {
     text-align: center;
     display: block;
